--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ py-tgcalls==0.8.6
 pykeyboard
 pyrogram==1.4.16
 python-dotenv
-pyyaml==5.3.1
+pyyaml==5.4
 requests
 speedtest-cli
 spotipy
@@ -22,5 +22,4 @@ tgcrypto
 numpy
 youtube-search
 youtube-search-python
-yt-dlp==2023.11.16
-telegraph
+git+https://github.com/yt-dlp/yt-dlp
